frontend/src/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-color: #FFFFFF; /* white */
  --background-color: #0d1105; /* dark grey */
  --heading-color: #B8860B; /* golden */
  --text-color: #AAAAAA; /* light grey */
  --text-color: #be612e; /* light grey */
}

#root {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100vh;
  width: 100vw;
  background-color: var(--background-color);
  color: var(--foreground-color);
}
/* Importing fonts */
@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@400;700&display=swap');

body {
  font-family: 'Roboto', sans-serif;
  background-color: var(--background-color);
  color: var(--foreground-color);
  height: 100%;
  width: 100%;
}

h1, h2, h3, h4, h5, h6 {
  font-family: 'Bebas Neue', sans-serif;
  color: var(--heading-color);
}

p, a, li, span, input, button {
  font-family: 'Roboto', sans-serif;
  color: var(--text-color);
}

